# ezplot-cli

./: LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/ezplot/: __init__.py  cli.py  errors.py  plots.py  probe.py  reader.py
