[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ezplot"
version = "0.1.0"
description = "Fast command-line plotting for research data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "polars>=1.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[project.scripts]
ezplot = "ezplot.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
